--- a/style.css
+++ b/style.css
@@ -153,3 +153,10 @@ table {
     background-color: var(--clr-gray150);
   }
 
+  footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 220px;
+  }
+
