--- a/style.css
+++ b/style.css
@@ -157,6 +157,6 @@ table {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 220px;
+    margin-top: 70vh;
   }
 
